# context-switch

./: .gitignore  README.md  build.bat  marketable_features.md  package-lock.json  package.json
.cargo/: config.toml
.github/workflows/: release.yml
logs/: webhelper.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/engine/: macos.rs  mod.rs  windows.rs
src-tauri/tests/: integration_tests.rs
ui/: index.html
